k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: license-mgmt
  labels:
    name: license-mgmt
