k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: license-mgmt-api
  namespace: license-mgmt
  labels:
    app: license-mgmt-api
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
      protocol: TCP
  selector:
    app: license-mgmt-api

---
apiVersion: v1
kind: Service
metadata:
  name: license-mgmt-api-lb
  namespace: license-mgmt
  labels:
    app: license-mgmt-api
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      name: http
      protocol: TCP
  selector:
    app: license-mgmt-api
